--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-^env
-^media/
-^static/
+env/
+media/
+static/
 py[co]$
 sw(o|p)$
 .sass-cache
 ^database.sqlite3$
 ^website/static/node_modules
-^website/static/bower_components
 ^website/static/.bowerrc
