Prepara o site pra ser colocado no ar
Os settings de produção estão quase prontos, mas provavelmente já dá
testar. O dockerfile teve algumas alterações, especialmente quanto a
usar o virtualenv da imagem fcoelho/uwsgi.

A base de dados vai ser um PostgreSQL.

O fabfile consegue já criar uma imagem a partir do template e instalar
as dependências usando o mirror local do pypi.

--- a/resources/Dockerfile.template
+++ b/resources/Dockerfile.template
@@ -1,5 +1,8 @@
 FROM fcoelho/uwsgi
 
-RUN pip install -r {REQUIREMENTS_FILE} --index-url {INDEX_URL}
+ADD code /code
+WORKDIR /code
+
+RUN /env/bin/pip install -r {REQUIREMENTS_FILE} --index-url {INDEX_URL}
 
 CMD ["/run.sh"]
