--- a/website/static/bower.json
+++ b/website/static/bower.json
@@ -2,6 +2,7 @@
   "name": "foundation_project",
   "dependencies": {
     "foundation": "zurb/bower-foundation#~5.2.2",
-    "fontawesome": "~4.1.0"
+    "fontawesome": "~4.1.0",
+    "spectrum": "~1.3.4"
   }
 }
