--- a/website/static/bower.json
+++ b/website/static/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "foundation": "zurb/bower-foundation#~5.3.1",
     "fontawesome": "~4.1.0",
-    "spectrum": "~1.3.4"
+    "spectrum": "~1.3.4",
+    "jquery-cookie": "~1.4.1"
   }
 }
